Closed Bug 1666839 Opened 5 years ago Closed 5 years ago

Windows with titlebar have black background box offset region on Elementary OS

Categories

(Core :: Widget: Gtk, defect, P2)

Firefox 81
Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- wontfix
firefox82 --- wontfix
firefox83 --- wontfix
firefox84 --- wontfix
firefox85 --- fixed

People

(Reporter: Crashdows, Assigned: stransky)

References

(Regression)

Details

(Keywords: regression)

Attachments

(4 files)

Attached image bug.png

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:81.0) Gecko/20100101 Firefox/81.0

Steps to reproduce:

make sure you update your firefox to 81.0
ope a windows and a tab then unmaximize and see black window behind firefox window

os: elementary os 5.1.7 (linux)
desktop env: GTK 3.22.30
firefox version:81(80 not affected)

Actual results:

black window behind firefox window appear

Expected results:

the black window not apear

[Tracking Requested - why for this release]:

Severity: -- → S3
OS: Unspecified → Linux
Hardware: Unspecified → Desktop

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core

I can reproduce this with Firefox windows that have titlebars on Elementary OS 5.1. It is based on Ubuntu 18.04 LTS but I was unable to reproduce it there with the latest 18.04.5 ISO.

Regression range:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=7134225dde7d8481a503a10f2ada8c1f038e488e&tochange=16bf991df0003caa9a5db83448373fb4f0bcd561

Regressed by Bug 1617002.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Regressed by: 1617002
Summary: the black window behind firefox windows → Windows with titlebar have black background box offset region on Elementary OS
Has Regression Range: --- → yes

(In reply to Kestrel from comment #3)

I can reproduce this with Firefox windows that have titlebars on Elementary OS 5.1. It is based on Ubuntu 18.04 LTS but I was unable to reproduce it there with the latest 18.04.5 ISO.

Regression range:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=7134225dde7d8481a503a10f2ada8c1f038e488e&tochange=16bf991df0003caa9a5db83448373fb4f0bcd561

Regressed by Bug 1617002.

it may affect only elementary os

This is a bit concerning to me given our shipping WR to some Linux users in Fx84. Any idea what might be happening here, Robert?

Flags: needinfo?(robert.mader)

(In reply to Ryan VanderMeulen [:RyanVM] from comment #5)

This is a bit concerning to me given our shipping WR to some Linux users in Fx84. Any idea what might be happening here, Robert?

Btw. we ship WR/Fx84 on Gnome only, right?

Luker, can you please attach output of 'env | grep XDG' terminal command? I think we also don't hide system titlebar by default on Elementary OS due to some issues there.

(In reply to Martin Stránský [:stransky] from comment #7)

Luker, can you please attach output of 'env | grep XDG' terminal command? I think we also don't hide system titlebar by default on Elementary OS due to some issues there.

Discard that please, I see you have the system titlebar enabled.

I'll look at it.

Assignee: nobody → stransky
Flags: needinfo?(robert.mader)
Priority: -- → P2

Does this by any chance only happen with scaling? Because this pretty much looks like a mutter bug that has long been fixed - but maybe the fix hasn't made it into their version yet.

No, I can reproduce it without scaling and when system titlebar is on. When system titlebar is disabled it works ok (which is the default state on Elementary).

(In reply to Martin Stránský [:stransky] from comment #11)

When system titlebar is disabled it works ok

Not in the case of the Library window (Ctrl+Shift+O) which always uses the system titlebar.

We need to set correct opaque region coordinates when system titlebar is on and we use CSD. We set opaque region to mShell but at 0,0 coordinates which is wrong as CSD is painted at 0,0.

Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/88585daea774 [Linux] When we draw to container (CSD mode), shift mShell opaque mask to container position, r=jhorak
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch

Firefox 85.0a1 still shows that box: https://i.stack.imgur.com/ruj91.png plus an additional shadow is displayed under the menu: https://i.stack.imgur.com/nbgFv.jpg

Sorry for posting links like this, didn't find a way to attach images.

oh got it!

here's one more...

can I attach multiples files in one go?

Okay, will look at it.

Jovial: looks like your build may not yet include the fix - maybe you just need to wait till tomorrow :)

No, problem :) Thanks for the update!

(In reply to jovial7joe from comment #23)

No, problem :) Thanks for the update!

and the fix!

thank you fix the issue, hope fix in other ones

Is this something you'd want to nominate for an RC2 ride-along, Martin?

Flags: needinfo?(stransky)

(In reply to Ryan VanderMeulen [:RyanVM] from comment #26)

Is this something you'd want to nominate for an RC2 ride-along, Martin?

I'd love so but I'm unsure of possible regressions here due to changed positioning mechanism. Better to keep it in beta.

Flags: needinfo?(stransky)

(In reply to jovial7joe from comment #18)

plus an additional shadow is displayed under the menu

That's Bug 1674473.

See Also: → 1682377
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: