Bug 1666839 [Linux] When we draw to container (CSD mode), shift mShell opaque mask to container position, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D98915